# pyGulp

./: .gitignore  README.md  pyproject.toml
configs/: base.yml  oleg.yml
scripts/: rigid_opt.py  run_optimisation.py
src/pygulp/analysis/: gulp_relax_analysis.py
src/pygulp/forcefields/: README.md  gnff_fine_tun.py
src/pygulp/io/: read_gulp.py
src/pygulp/molecule/: fix_mol.py  fix_mol_UMA.py  fix_mol_gradient.py  fix_mol_og.py
src/pygulp/relaxation/: relax.py  relax_atom.py  relax_mol.py
src/pygulp/utils/: config.py
tests/: test_parameters.py
