[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyGulp"
version = "0.1.0"
dependencies = [
    "ase",
    "numpy",
    "matplotlib",
    "pandas",
    "dscribe",
    "optuna",
    "spglib",
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]
